# nbody

./: .gitignore  CMakeLists.txt  README.md
BH_CPU/: Makefile  main  main.cpp
BH_CUDA/: CMakeLists.txt  barnesHutCuda.cu  barnesHutCuda.cuh  barnesHut_kernel.cu  barnesHut_kernel.cuh  barnes_hut.cuh  constants.h  launcher.py  main.cu
BH_CUDA/tests/: bh_1000.csv  bh_1024000.csv  bh_128000.csv  bh_16000.csv  bh_2000.csv  bh_2048000.csv  bh_256000.csv  bh_32000.csv  bh_4000.csv  bh_4096000.csv  bh_512000.csv  bh_64000.csv  bh_8000.csv  bh_8192000.csv
DS_CPU/: Makefile  launcher.py  main  main.cpp
DS_CPU/tests/: bh_1000.csv  bh_2000.csv  bh_4000.csv
DS_CUDA/: Makefile  launcher.py  main  main.cu
GUI/: CMakeLists.txt  README.md  imgui.ini  logs.txt
GUI/barnes_hut/: CMakeLists.txt
GUI/barnes_hut/include/common/: constants.cuh  error_handling.cuh  types.cuh
GUI/barnes_hut/include/sfc/: body_sorter.cuh
GUI/barnes_hut/include/simulation/: barnes_hut.cuh  sfc_barnes_hut.cuh  simulation_base.cuh
GUI/barnes_hut/src/: main.cu
GUI/barnes_hut/src/kernels/: bbox_kernel.cu  octree_kernel.cu
GUI/barnes_hut/src/sfc/: body_sorter.cu
GUI/barnes_hut/src/simulation/: sfc_barnes_hut.cu
GUI/include/common/: constants.cuh  error_handling.cuh
GUI/include/sfc/: body_sorter.cuh  hilbert.cuh  morton.cuh  sfc_framework.cuh
GUI/include/simulation/: barnes_hut.cuh  cpu_barnes_hut.hpp  cpu_direct_sum.hpp  cpu_sfc_direct_sum.hpp  gpu_direct_sum.cuh  gpu_sfc_barnes_hut.cuh  gpu_sfc_direct_sum.cuh  sfc_barnes_hut.cuh  simulation_base.cuh  simulation_factory.hpp  simulation_thread.hpp
GUI/include/simulation/base/: base.cuh
GUI/include/simulation/implementations/cpu/: barnes_hut.hpp  direct_sum.hpp  sfc_variants.hpp
GUI/include/simulation/implementations/gpu/: barnes_hut.cuh  direct_sum.cuh  sfc_variants.cuh
GUI/include/ui/: opengl_renderer.h  opengl_renderer.hpp  simulation_state.h  simulation_state.hpp  simulation_ui_manager.h  simulation_ui_manager.hpp
GUI/src/: main.cpp
GUI/src/kernels/: bbox_kernel.cu  force_kernel.cu  octree_kernel.cu  reset_kernel.cu
GUI/src/sfc/: body_sorter.cu  hilbert.cuh  morton.cuh  sfc_framework.cu
GUI/src/simulation/: barnes_hut.cu  cpu_barnes_hut.cpp  cpu_direct_sum.cpp  cpu_sfc_direct_sum.cpp  gpu_barnes_hut.cu  gpu_direct_sum.cu  gpu_sfc_barnes_hut.cu  gpu_sfc_direct_sum.cu  sfc_barnes_hut.cu  simulation_base.cu  simulation_factory.cpp  simulation_thread.cpp
GUI/src/simulation/base/: base.cu
GUI/src/simulation/implementations/cpu/: barnes_hut.cpp  sfc_variants.cpp
GUI/src/simulation/implementations/gpu/: barnes_hut.cu  direct_sum.cu  sfc_barnes_hut.cu  sfc_variants.cu
GUI/src/ui/: opengl_renderer.cpp  simulation_state.cpp  simulation_ui_manager.cpp
SFC/BH_CUDA/: CMakeLists.txt  Makefile  barnesHutCuda.cu  barnesHutCuda.cuh  barnesHut_kernel.cu  barnesHut_kernel.cuh  barnes_hut.cu  barnes_hut.cuh  barnes_hut_kernel.cu  barnes_hut_kernel.cuh  constants.h  err.h  main.cu  sfc_morton.cuh  sfc_utils.cuh
SFC/DS_CUDA/: Makefile  main  main.cu
SFC/DS_CUDA Claude/: main
include/common/: constants.cuh  error_handling.cuh  types.cuh
include/sfc/: sfc_framework.cuh
include/simulation/: simulation_factory.hpp  simulation_thread.hpp
include/simulation/base/: base.cuh
include/simulation/implementations/cpu/: barnes_hut.hpp  direct_sum.hpp  sfc_variants.hpp
include/simulation/implementations/gpu/: barnes_hut.cuh  direct_sum.cuh  sfc_variants.cuh
include/ui/: opengl_renderer.hpp  simulation_state.hpp  simulation_ui_manager.hpp
src/: main.cpp
src/kernels/: bbox_kernel.cu  force_kernel.cu  octree_kernel.cu  reset_kernel.cu
src/sfc/: sfc_framework.cu
src/simulation/: simulation_factory.cpp  simulation_thread.cpp
src/simulation/base/: base.cu
src/simulation/implementations/cpu/: barnes_hut.cpp  direct_sum.cpp  sfc_variants.cpp
src/simulation/implementations/gpu/: barnes_hut.cu  direct_sum.cu  sfc_variants.cu
src/ui/: opengl_renderer.cpp  simulation_state.cpp  simulation_ui_manager.cpp
